comment drawer + Add SizedBox for last item of list + Fix some bug in _buildFrontWidget + Add some TODO + Add some color to Wave and Comment them + Change the PrimaryColor + Add some Font to pubspec + Change the Label in AndroidManifest

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,5 +81,15 @@ flutter:
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
+  fonts:
+    - family: BNazanin
+      fonts:
+        - asset: assets/fonts/BNazanin.ttf
+    - family: BNazanin_outline
+      fonts:
+        - asset: assets/fonts/BNazanin_Outline.ttf
+    - family: BTitr_Bold
+      fonts:
+        - asset: assets/fonts/BTitr_Bold.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
