--- a/hicoffee/pubspec.yaml
+++ b/hicoffee/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   flutter_fluid_slider: ^1.0.2
   clay_containers: ^0.2.2
   number_selection: ^0.0.1
+  provider: ^4.3.1
+  http: ^0.12.2
+  sqflite: ^1.3.0
 #  font_awesome_flutter: ^8.8.1
 
 dev_dependencies:
