--- a/hicoffee/pubspec.yaml
+++ b/hicoffee/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   provider: ^4.3.1
   http: ^0.12.2
   sqflite: ^1.3.0
+  loading_text: ^0.0.2
+  connectivity: ^0.4.9
 #  font_awesome_flutter: ^8.8.1
 
 dev_dependencies:
@@ -59,6 +61,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/gifs/890-loading-animation.gif
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -87,9 +91,9 @@ flutter:
     - family: BNazanin
       fonts:
         - asset: assets/fonts/BNazanin.ttf
-    - family: BNazanin_outline
+    - family: Waltograph
       fonts:
-        - asset: assets/fonts/BNazanin_Outline.ttf
+        - asset: assets/fonts/waltograph42.otf
     - family: BTitr_Bold
       fonts:
         - asset: assets/fonts/BTitr_Bold.ttf
