--- a/hicoffee/pubspec.yaml
+++ b/hicoffee/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   sqflite: ^1.3.0
   loading_text: ^0.0.2
   connectivity: ^0.4.9
+  flutter_spinkit: ^4.1.2
+
 #  font_awesome_flutter: ^8.8.1
 
 dev_dependencies:
