--- a/hicoffee/pubspec.yaml
+++ b/hicoffee/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.4.1+1
+version: 1.5.1+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -40,6 +40,7 @@ dependencies:
   sqflite: ^1.3.0
 #  loading_text: ^0.0.2
   connectivity: ^0.4.9
+  numberpicker: ^1.2.0
   flutter_spinkit: ^4.1.2
 
 #  font_awesome_flutter: ^8.8.1
