--- a/hicoffee/pubspec.yaml
+++ b/hicoffee/pubspec.yaml
@@ -66,7 +66,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - assets/gifs/890-loading-animation.gif
+    - assets/gifs/coffee.gif
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -99,9 +99,9 @@ flutter:
       fonts:
         - asset: assets/fonts/waltograph42.otf
     - family: WaltographUI
-      fonts:
-        - asset: assets/fonts/waltographUI.ttf
-    - family: BTitr_Bold
+#      fonts:
+#        - asset: assets/fonts/waltographUI.ttf
+#    - family: BTitr_Bold
       fonts:
         - asset: assets/fonts/BTitr_Bold.ttf
     - family: Milton
