--- a/hicoffee/pubspec.yaml
+++ b/hicoffee/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.10.2+1
+version: 1.11.2+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -28,7 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  drawerbehavior: ^1.0.3
+#  drawerbehavior: ^1.0.3
   wave: ^0.0.8
   folding_cell: ^1.0.0
   flip_card: ^0.4.4
@@ -38,14 +38,12 @@ dependencies:
   provider: ^4.3.1
   http: ^0.12.2
   sqflite: ^1.3.0
-#  loading_text: ^0.0.2
   connectivity: ^0.4.9
   numberpicker: ^1.2.0
   flutter_spinkit: ^4.1.2
   url_launcher: ^5.5.0
-#  intro_slider: ^2.3.1
   font_awesome_flutter: ^8.8.1
-  intl: ^0.16.1
+#  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +66,8 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/gifs/coffee.gif
+    - assets/images/login_bottom.png
+    - assets/images/main_top.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
