--- a/hicoffee/pubspec.yaml
+++ b/hicoffee/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.11.2+1
+version: 1.12.2+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -68,6 +68,7 @@ flutter:
     - assets/gifs/coffee.gif
     - assets/images/login_bottom.png
     - assets/images/main_top.png
+    - assets/images/login_logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
