--- a/hicoffee/pubspec.yaml
+++ b/hicoffee/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   flutter_spinkit: ^4.1.2
   url_launcher: ^5.5.0
   font_awesome_flutter: ^8.8.1
-#  intl: ^0.16.1
+  intl: ^0.16.1
 #  shamsi_date: ^0.8.1
   jalali_date: ^0.1.5
   progress_button: ^0.0.2
