--- a/hicoffee/pubspec.yaml
+++ b/hicoffee/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.17.1+1
+version: 1.17.2+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -104,9 +104,9 @@ flutter:
 #    - family: WaltographUI
 #      fonts:
 #        - asset: assets/fonts/waltographUI.ttf
-    - family: BTitr_Bold
-      fonts:
-        - asset: assets/fonts/BTitr_Bold.ttf
+#    - family: BTitr_Bold
+#      fonts:
+#        - asset: assets/fonts/BTitr_Bold.ttf
     - family: Milton
       fonts:
         - asset: assets/fonts/Milton Keynes.otf
