--- a/hicoffee/pubspec.yaml
+++ b/hicoffee/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.17.2+1
+version: 1.18.1+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -44,6 +44,7 @@ dependencies:
   number_selection: ^0.0.1
   flutter_fluid_slider: ^1.0.2
   font_awesome_flutter: ^8.8.1
+  liquid_pull_to_refresh: ^2.0.0
 
 
 dev_dependencies:
@@ -104,9 +105,9 @@ flutter:
 #    - family: WaltographUI
 #      fonts:
 #        - asset: assets/fonts/waltographUI.ttf
-#    - family: BTitr_Bold
-#      fonts:
-#        - asset: assets/fonts/BTitr_Bold.ttf
+    - family: BTitr_Bold
+      fonts:
+        - asset: assets/fonts/BTitr_Bold.ttf
     - family: Milton
       fonts:
         - asset: assets/fonts/Milton Keynes.otf
